# cser_realisation

./: .gitignore  README.md
nprs_lib/sources/: CMakeLists.txt
nprs_lib/sources/cmake/: utils.cmake
nprs_lib/sources/common/: CMakeLists.txt
nprs_lib/sources/common/src/common/: CommonDefinitions.h  Line.h  Matrix.h  Matrix.inl  NprsStd.h  Point.h  Point.inl  Quad.h  Rectangle.h  Rectangle.inl  Size.h  Size.inl
nprs_lib/sources/common/src/common/exceptions/: ArgumentException.cpp  ArgumentException.h  CommonExceptions.cpp  CommonExceptions.h  NotSupportedException.cpp  NotSupportedException.h  NprsException.cpp  NprsException.h
nprs_lib/sources/common/src/common/functional/: ListProcessing.h
nprs_lib/sources/common/src/common/image/: Bitmap.cpp  Bitmap.h  Color.cpp  Color.h  ColorData.cpp  ColorData.h  ColorDataByte.cpp  ColorDataByte.h  Image.cpp  Image.h  Image.inl  ImageConverter.cpp  ImageConverter.h  RawImageData.cpp  RawImageData.h
nprs_lib/sources/common/src/common/math/: Math.cpp  Math.h  Vec.h  Vector.h
nprs_lib/sources/console_tests/: CMakeLists.txt
nprs_lib/sources/console_tests/src/: console_test.cpp
nprs_lib/sources/dlib/: CMakeLists.txt
nprs_lib/sources/dlib/src/dlib/all/: source.cpp
nprs_lib/sources/npr_console/: CMakeLists.txt
nprs_lib/sources/npr_console/src/: main.cpp
nprs_lib/sources/nprs_cs_api/: CMakeLists.txt
nprs_lib/sources/nprs_cs_api/src/: NativeRecognizer.cpp  NativeRecognizer.h  NumberPlate.h  RecognitionResults.cpp  RecognitionResults.h
nprs_lib/sources/nprs_java_api/src/: nprs_jni.cpp  nprs_jni.h
nprs_lib/sources/ocv_textdetection_sample/: CMakeLists.txt
nprs_lib/sources/qt_console_ui/: CMakeLists.txt
nprs_lib/sources/qt_console_ui/src/: main.cpp
nprs_lib/sources/qt_test_gui/: CMakeLists.txt
nprs_lib/sources/qt_test_gui/src/: FrameView.cpp  FrameView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
nprs_lib/sources/qt_training_utility/: CMakeLists.txt
nprs_lib/sources/qt_training_utility/src/: main.cpp
nprs_lib/sources/recognition_system/: CMakeLists.txt
nprs_lib/sources/recognition_system/src/rec_system/: Algorithm.cpp  Algorithm.h  RecognitionSystem.cpp  RecognitionSystem.h
nprs_lib/sources/recognition_system/src/rec_system/classification/: Classifier.h  ClassifierTrainer.h  TrainingSet.cpp  TrainingSet.h
nprs_lib/sources/recognition_system/src/rec_system/classification/adaboost/: AdaboostClassifier.cpp  AdaboostClassifier.h
nprs_lib/sources/recognition_system/src/rec_system/classification/kmeans/: FCMeansClassifier.cpp  FCMeansClassifier.h  FuzzyCluster.cpp  FuzzyCluster.h
nprs_lib/sources/recognition_system/src/rec_system/clusterization/: Clusterer.cpp  Clusterer.h
nprs_lib/sources/recognition_system/src/rec_system/clusterization/fuzzy_fcmeans/: FCMeansClusterer.cpp  FCMeansClusterer.h  FuzzyCluster.cpp  FuzzyCluster.h
nprs_lib/sources/recognition_system/src/rec_system/common_structures/: NumberPlate.cpp  NumberPlate.h  NumberPlateCharacter.cpp  NumberPlateCharacter.h  RecognitionResults.cpp  RecognitionResults.h
nprs_lib/sources/recognition_system/src/rec_system/image_processing/: GradientOperator.h  SimpleGradientOperator.cpp  SimpleGradientOperator.h  SobelOperator.cpp  SobelOperator.h
nprs_lib/sources/recognition_system/src/rec_system/image_processing/feature_extraction/: FeatureExtractor.h  HistogramExtractor.cpp  (+3 more)
nprs_lib/sources/recognition_system/src/rec_system/machine_learning/: CascadeClassifierTrainer.cpp  CascadeClassifierTrainer.h  DLibDecisionMaker.cpp  DLibDecisionMaker.h  DLibHelper.cpp  DLibHelper.h  DecisionMaker.h  HaarCascadeDecisionMaker.cpp  HaarCascadeDecisionMaker.h  OneVsOneDecisionFunction.h  OneVsOneTrainer.cpp  OneVsOneTrainer.h  SvmRegressionTrainer.cpp  SvmRegressionTrainer.h  Trainer.h  TrainingSet.cpp  TrainingSet.h
nprs_lib/sources/recognition_system/src/rec_system/plate_detection/: HoughLineDetector.cpp  HoughLineDetector.h  PlateDetector.cpp  PlateDetector.h  RegionGrouper.cpp  RegionGrouper.h  SimpleRegionGrouper.cpp  SimpleRegionGrouper.h
nprs_lib/sources/recognition_system/src/rec_system/symbol_recognition/: SymbolRecognizer.cpp  SymbolRecognizer.h
nprs_lib/sources/training_lib/: CMakeLists.txt
nprs_lib/sources/training_lib/src/training_lib/: IClassifierTrainer.h  InputSample.cpp  InputSample.h  Sample.cpp  Sample.h  Sample.inl  SampleExtractor.cpp  SampleExtractor.h  SymbolDetectorTrainer.cpp  SymbolDetectorTrainer.h
nprs_lib/sources/training_lib/src/training_lib/input_sample_extractors/: AutoThresholdExtractor.cpp  AutoThresholdExtractor.h  HeavyRandomRegionExtractor.cpp  HeavyRandomRegionExtractor.h  HogSampleExtractor.cpp  HogSampleExtractor.h  LightRandomRegionExtractor.cpp  LightRandomRegionExtractor.h  RandomRegionExtractor.cpp  RandomRegionExtractor.h
nprs_lib/sources/training_lib/src/training_lib/input_samples/: ImageInputSample.cpp  ImageInputSample.h  NegativeImageInputSample.cpp  NegativeImageInputSample.h  NegatvieRegionInputSample.cpp  NegatvieRegionInputSample.h  PositiveImageInputSample.cpp  PositiveImageInputSample.h
nprs_lib/sources/training_lib/src/training_lib/trainers/: LightClassifierTrainer.cpp  LightClassifierTrainer.h
sources/: CMakeLists.txt
sources/common/: CMakeLists.txt
sources/common/src/common/: CommonDefinitions.h  Line.h  Matrix.h  Point.h  Rectangle.h
sources/common/src/common/exceptions/: ArgumentException.cpp  ArgumentException.h  NotSupportedException.cpp  NprsException.cpp  NprsException.h
sources/common/src/common/image/: Color.h  Image.cpp  Image.h  ImageConverter.cpp  ImageConverter.h
sources/console_tests/src/: console_test.cpp
sources/nprs_cs_api/: CMakeLists.txt
sources/nprs_cs_api/src/: nprs_cs.cpp  nprs_cs.h
sources/nprs_java_api/: CMakeLists.txt
sources/nprs_java_api/src/: nprs_jni.cpp  nprs_jni.h
sources/recognition_system/: CMakeLists.txt
sources/recognition_system/src/rec_system/: RecognitionSystem.cpp  RecognitionSystem.h
sources/recognition_system/src/rec_system/common_structures/: NumberPlate.h  NumberPlateCharacter.h  RecognitionResults.h
(+196 files in other folders)
