CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(nprs)

SET(CMAKE_BUILD_TYPE Debug)

IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    MESSAGE("using clang")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
    SET(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++11")
    SET(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
ELSEIF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    MESSAGE("using gcc")
    ADD_DEFINITIONS( -std=c++11 )
ELSEIF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
    MESSAGE("using intel")
ELSEIF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    MESSAGE("using msvc")
    SET(MSVC true)
ENDIF()

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(recognition_system)
ADD_SUBDIRECTORY(console_tests)

IF (JAVA_API)
	ADD_SUBDIRECTORY(nprs_java_api)
ENDIF()

IF (TEST_GUI)
	FIND_PACKAGE(Qt5Core)
	FIND_PACKAGE(Qt5Widgets)

	IF (Qt5Core_FOUND AND Qt5Widgets_FOUND)
		ADD_SUBDIRECTORY(qt_test_gui)
	ENDIF()
ENDIF()

IF (MSVC)
	ADD_SUBDIRECTORY(nprs_cs_api)
ENDIF()
